UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/ftr_Asset_StagingCircuit__c.object-meta.xml
<CustomObject>
    <label>ftr_Asset_StagingCircuit</label>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>ftr_Asset_Staging_Circuit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ftr_Asset_StagingCircuits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>