UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/All_to_One_Bundling_RUID_1__c.field-meta.xml
<CustomField>
    <fullName>All_to_One_Bundling_RUID_1__c</fullName>
    <label>All to One Bundling RUID 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>