UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Bit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bit_Rate__c</fullName>
    <label>Bit Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>