UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Broadband_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Service_Category__c</fullName>
    <label>Broadband Service Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>