UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <label>Class of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>