UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/CUST_ACCT_NBR__c.field-meta.xml
<CustomField>
    <fullName>CUST_ACCT_NBR__c</fullName>
    <label>CUST_ACCT_NBR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>