UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/ftr_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>ftr_Account_Name__c</fullName>
    <label>ftr_Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>