UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/ftr_circuitName__c.field-meta.xml
<CustomField>
    <fullName>ftr_circuitName__c</fullName>
    <label>ftr_circuitName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>