UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/ftr_documentNumber__c.field-meta.xml
<CustomField>
    <fullName>ftr_documentNumber__c</fullName>
    <label>ftr_documentNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>