UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/ftr_Item_Alias__c.field-meta.xml
<CustomField>
    <fullName>ftr_Item_Alias__c</fullName>
    <label>ftr_Item_Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>