UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/ftr_NCI__c.field-meta.xml
<CustomField>
    <fullName>ftr_NCI__c</fullName>
    <label>ftr_NCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>