UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/ftr_PSR_parentServiceItemId__c.field-meta.xml
<CustomField>
    <fullName>ftr_PSR_parentServiceItemId__c</fullName>
    <label>ftr_PSR_parentServiceItemId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>