UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/ftr_SPEC_GRP_ID__c.field-meta.xml
<CustomField>
    <fullName>ftr_SPEC_GRP_ID__c</fullName>
    <label>ftr_SPEC_GRP_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>