UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/HBE__c.field-meta.xml
<CustomField>
    <fullName>HBE__c</fullName>
    <label>HBE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>