UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/LAN_IP__c.field-meta.xml
<CustomField>
    <fullName>LAN_IP__c</fullName>
    <label>LAN IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>