UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/M6_Status__c.field-meta.xml
<CustomField>
    <fullName>M6_Status__c</fullName>
    <label>M6_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>