UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Managed_Device__c.field-meta.xml
<CustomField>
    <fullName>Managed_Device__c</fullName>
    <label>Managed Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>