UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Negotiation_Port_Speed__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Port_Speed__c</fullName>
    <label>Negotiation (Port Speed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>