UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Pass_Number__c.field-meta.xml
<CustomField>
    <fullName>Pass_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pass Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>