UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Physical_Medium__c.field-meta.xml
<CustomField>
    <fullName>Physical_Medium__c</fullName>
    <label>Physical Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>