UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/PriLocCity__c.field-meta.xml
<CustomField>
    <fullName>PriLocCity__c</fullName>
    <label>PriLocCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>