UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/PriLocPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PriLocPostalCode__c</fullName>
    <label>PriLocPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>