UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/PriLocState__c.field-meta.xml
<CustomField>
    <fullName>PriLocState__c</fullName>
    <label>PriLocState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>