UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/PriLocStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>PriLocStreetAddress__c</fullName>
    <label>PriLocStreetAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>