UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/PSR_EVC_Type__c.field-meta.xml
<CustomField>
    <fullName>PSR_EVC_Type__c</fullName>
    <label>PSR_EVC Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>