UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/PSR_SDWAN__c.field-meta.xml
<CustomField>
    <fullName>PSR_SDWAN__c</fullName>
    <label>PSR_SDWAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>