UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/SecLocCity__c.field-meta.xml
<CustomField>
    <fullName>SecLocCity__c</fullName>
    <label>SecLocCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>