UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/SecLocPostalCode__c.field-meta.xml
<CustomField>
    <fullName>SecLocPostalCode__c</fullName>
    <label>SecLocPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>