UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/SecLocState__c.field-meta.xml
<CustomField>
    <fullName>SecLocState__c</fullName>
    <label>SecLocState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>