UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/SecLocStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>SecLocStreetAddress__c</fullName>
    <label>SecLocStreetAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>