UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Service_Address_From_DPI__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_From_DPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Address From DPI</label>
    <type>Checkbox</type>
</CustomField>