UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Service_Multiplexing__c.field-meta.xml
<CustomField>
    <fullName>Service_Multiplexing__c</fullName>
    <label>Service Multiplexing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>