UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/SPEED__c.field-meta.xml
<CustomField>
    <fullName>SPEED__c</fullName>
    <label>SPEED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>