UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/State_DPI__c.field-meta.xml
<CustomField>
    <fullName>State_DPI__c</fullName>
    <label>State_DPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>