UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/TermLength__c.field-meta.xml
<CustomField>
    <fullName>TermLength__c</fullName>
    <label>TermLength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>