UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/Uni_Maximum_Transmission_Unit_MTU__c.field-meta.xml
<CustomField>
    <fullName>Uni_Maximum_Transmission_Unit_MTU__c</fullName>
    <label>Uni Maximum Transmission Unit (MTU)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>