UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_Asset_StagingCircuit__c/fields/WAN_IP__c.field-meta.xml
<CustomField>
    <fullName>WAN_IP__c</fullName>
    <label>WAN IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>